<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014 Tom Peerdeman.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Tom Peerdeman - initial API and implementation
-->
<resources>

    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="evil">Evil</string>
    <string name="nice">Normal</string>
    <string name="hidespaces">Hide spaces</string>
    <string name="maxguesses">Maximum guesses: 6</string>
    <string name="maxwordlen">Maximum word length: 12</string>
    <string name="minwordlen">Minimum word length: 3</string>
    <string name="gameplay">Gameplay</string>
    <string name="action_new_game">New game</string>
    <string name="action_return_game">Return to game</string>
    <string name="action_highscore">Highscore</string>
    <string name="hideNonAlpha">Don\'t reveal non alphabetic chars</string>
    <string name="settingsApply">Settings take effect with a new game</string>
    <string name="openKeyboard">Open keyboard</string>
    <string name="imageViewContentDescriptor">Hangman status</string>

</resources>
