<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameplay"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/gameplayRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/niceRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/nice" />

            <RadioButton
                android:id="@+id/evilRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/evil" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/hideSpacesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hidespaces" />

        <TextView
            android:id="@+id/guessesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxguesses"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/maxGuessesBar"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:max="@integer/maxNumGuesses"
            android:progress="@integer/defaultNumGuesses" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/wordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxwordlen"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/maxWordLengthBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minwordlen"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/minWordLengthBar"
            android:layout_width="132dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>