<!--
  Copyright (c) 2014 Tom Peerdeman.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Tom Peerdeman - initial API and implementation
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_game"
        android:showAsAction="never"
        android:title="@string/action_new_game"/>
    <item
        android:id="@+id/action_highscore"
        android:showAsAction="never"
        android:title="@string/action_highscore"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
